// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mutation: deletePost (Drizzle v2 Pure Object Syntax) > should delete a post and return an array using object-based where clause 1`] = `
{
  "__typename": "Post",
  "author": {
    "__typename": "User",
    "name": "Duron",
  },
  "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
  "categories": [
    {
      "__typename": "Category",
      "name": "Lia",
    },
  ],
  "categoriesCount": 1,
  "content": "HxnMZYUUVi",
  "published": false,
  "title": "BTsJpmtUOPR6c",
}
`;

exports[`delete > delete 1`] = `
{
  "deletePost": [
    {
      "__typename": "Post",
      "author": {
        "__typename": "User",
        "email": "proactive_esha@outlook.com",
        "name": "Duron",
        "roles": [
          "ADMIN",
          "ADMIN",
          "USER",
          "USER",
          "USER",
          "ADMIN",
          "ADMIN",
          "USER",
          "ADMIN",
          "ADMIN",
        ],
      },
      "authorCount": 1,
      "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
      "categories": [
        {
          "__typename": "Category",
          "name": "Lia",
        },
      ],
      "categoriesCount": 1,
      "content": "HxnMZYUUVi",
      "published": false,
      "title": "BTsJpmtUOPR6c",
    },
  ],
}
`;

exports[`delete > delete no relay 1`] = `
{
  "deletePost": [
    {
      "__typename": "Post",
      "authorId": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
      "content": "zHE2MmHT4vA2yLu",
      "published": true,
      "title": "DkTa8tNQhdQTBtQKfQ",
    },
  ],
}
`;
